Archive2/ea/5676de64b516eb/output
main.cpp: In function 'int main()':
main.cpp:22:8: error: no matching function for call to 'bar(std::vector<Derived<double> >&)'
   bar(y); // boom
        ^
main.cpp:13:5: note: candidate: template<class T> int bar(const std::vector<Base<T> >&)
 int bar(const std::vector< Base<T> >& y) {
     ^
main.cpp:13:5: note:   template argument deduction/substitution failed:
main.cpp:22:8: note:   mismatched types 'Base<T>' and 'Derived<double>'
   bar(y); // boom
        ^
main.cpp:22:8: note:   'std::vector<Derived<double> >' is not derived from 'const std::vector<Base<T> >'
